@@ -1,75 +1,11 @@
 
     <!-- footer.php START -->
     
-<br class='clear_both' />
-
-<p class='align_center' style='margin: 15px;'><a href='javascript:scroll(0,0);' title='Return to the top of the page.'>Back To Top</a></p>
-
-
-<?php
-	
-	$bundle_error_logs .= $log_array['system_warning'];
-	
-	$bundle_error_logs .= $log_array['system_error'];
-	
-	$bundle_error_logs .= $log_array['conf_error'];
-	
-	$bundle_error_logs .= $log_array['security_error'];
-	
-	$bundle_error_logs .= $log_array['ext_data_error'];
-	
-	$bundle_error_logs .= $log_array['int_api_error'];
-	
-	$bundle_error_logs .= $log_array['market_error'];
-	
-	$bundle_error_logs .= $log_array['other_error'];
-
-
-	foreach ( $log_array['cache_error'] as $error ) {
-	$bundle_error_logs .= $error;
-	}
-
-	foreach ( $log_array['notify_error'] as $error ) {
-	$bundle_error_logs .= $error;
-	}
-	
-	
-	if ( $ct_conf['dev']['debug'] != 'off' ) {
-	
-	$bundle_error_logs .= $log_array['system_debug'];
-	
-	$bundle_error_logs .= $log_array['conf_debug'];
-	
-	$bundle_error_logs .= $log_array['security_debug'];
-	
-	$bundle_error_logs .= $log_array['ext_data_debug'];
-	
-	$bundle_error_logs .= $log_array['int_api_debug'];
-	
-	$bundle_error_logs .= $log_array['market_debug'];
-	
-	$bundle_error_logs .= $log_array['other_debug'];
-	
-	
-		foreach ( $log_array['cache_debug'] as $error ) {
-		$bundle_error_logs .= $error;
-		}
-	
-		foreach ( $log_array['notify_debug'] as $error ) {
-		$bundle_error_logs .= $error;
-		}
-		
-	
-	}
-      
-  
-// Sort logs by timestamp
-$bundle_error_logs = $ct_gen->sort_log($bundle_error_logs);
-
-
-?>
+    <br class='clear_both' />
+    
+    <p class='align_center' style='margin: 15px;'><a href='javascript:scroll(0,0);' title='Return to the top of the page.'>Back To Top</a></p>
             	
-    <div id="app_error_alert" style='display: none;'><?=$bundle_error_logs?></div>
+    <div id="app_error_alert" style='display: none;'><?php echo $alerts_gui_errors . ( isset($alerts_gui_debugging) && $alerts_gui_debugging != '' ? '<br />============<br />DEBUGGING:<br />============<br />' . $alerts_gui_debugging : '' ); ?></div>
             	
     <p class='align_center'><a href='https://taoteh1221.github.io' target='_blank' title='Check for upgrades to the latest version here.'>Running <?=ucfirst($app_edition)?> Edition<?=( $ct_gen->admin_logged_in() ? ' v' . $app_version : '' )?></a>
     
